_includes/css/screen.css
* {
  margin: 0;
  padding: 0;
}

html, body {
  height: 100%;
}

body {
  font-size: 16px;
  background-color: white;
  line-height: 24px;
  margin: 0;
}

.topbar {
  position: fixed;
  left: 0;
  top: 0;
  right: 0;
  text-align: center;
  padding-left: 35%;
  padding-right: 19%;
  font-weight: 600;
  background-color: rgba(33,33,33,0.85);
  box-shadow: 0 1px 5px 0px rgba(0,0,0,0.7);
  z-index: 99;
}

.topbar ul li {
  display: inline;
  list-style: none;
  margin-left: 30px;
  font-family: "Montserrat", sans-serif;
  font-size: 110%;
  letter-spacing: 0.7px;
  color: #fff;
  text-shadow: 0 -1px 0 rgba(0,0,0,0.4);
}

.topbar a, .topbar a:visited {
  color: #fff;
  transition: all 0.2s ease-in;
  -webkit-transition: all 0.2s ease-in;
  -moz-transition: all 0.2s ease-in;
  -o-transition: all 0.2s ease-in;
}

.topbar a:hover {
  text-decoration: none;
  color: {{ site.style.highlight_color }};
}

h1, h2, h3, h4, h5, h6 {
  color: #181818;
  font-family: "Montserrat", sans-serif;
  font-weight: 600;
}

h1.title {
  font-family: "Open Sans", sans-serif;
  color: {{ site.style.highlight_color }};
  font-weight: 700;
  font-size: 39px;
  line-height: 49px;
}

h1 {
  font-size: 30px;
  line-height: 40px;
}

h2 {
  font-size: 25px;
  line-height: 32px;
  margin: 1.5em 0 0.5em;
}

h3 {
  font-size: 23px;
  line-height: 23px;
  margin: 1.5em 0 0.5em;
}

h1.backdrop {
  background-position: center center;
  background-repeat: no-repeat;
  background-size: 100% auto;
  color: {{ site.style.highlight_color }};
  line-height: 335px;
  padding-left: 25px;
  margin-bottom: 20px;
  text-shadow: 0 -1px 0 rgba(0,0,0,0.8);
  box-shadow: 0 0 5px rgba(0,0,0,0.8);
}

h1.backdrop.about {
  background-image: url(/assets/about/backdrop.jpg);
}

h1.backdrop.offering {
  background-image: url(/assets/offering/backdrop.jpg);
  text-align: right;
  padding-right: 30px;
}

h1.backdrop.workshops {
  background-image: url(/assets/workshops/backdrop.jpg);
  text-align: right;
  padding-right: 10px;
}

h1.backdrop.bestof {
  background-image: url(/assets/bestof/backdrop.jpg);
  margin-bottom: 5%;
}

h1.backdrop.speaking {
  background-image: url(/assets/speaking/backdrop.jpg);
  text-align: right;
  padding-right: 25px;
}

h1.backdrop.git {
  background-image: url(/assets/git/backdrop.png);
  text-align: right;
  padding-right: 30px;
  font-size: 218%;
}

h4 a {
  display: inline-block;
  font-size: 95%;
  margin-right: 5pt;
}

ul {
  margin: 1em 0;
  list-style: disc;
}

a {
  color: {{ site.style.highlight_color }};
  text-decoration: none;
}

a:hover {
  color: {{ site.style.highlight_color }};
  text-decoration: underline;
}

a:visited {
  color: {{ site.style.highlight_color }};
}

a.pagination-title {
  text-decoration: none;
}

table {
  font-size: inherit;
  font: 100%;
  width: 90%;
  border-collapse: collapse;
  border-style: hidden;
  margin: 10px auto 10px auto;
}

table th {
  font-weight: 600;
  border: 1px solid silver;
  padding: 5px;
}

table td {
  border: 1px solid silver;
  padding: 5px;
}

img {
  display: block;
  margin-left: auto;
  margin-right: auto;
}

p img {
  display: block;
  margin: 50px auto;
}

span.tag-icon {
  color: #555;
  font-size: 70%;
  text-shadow: 0 1px 0 rgba(255,255,255,0.8);
}

span.nowrap {
  display: inline-block;
}

#home #blog-posts {
  margin-left: 6%;
}

#home #blog-posts li:before {
  content: '';
}

ul.posts {
  list-style-type: none;
  margin-left: 3%;
  margin-top: 0;
  margin-bottom: 10px;
}

ul.posts li {
  line-height: 22px;
  font-size: 16px;
  margin-bottom: 0.6%;
}

ul.posts span {
  font-family: 'Lucida Console', 'Andale Mono', monospace;
  color: #aaa;
  padding-right: 5px;
  font-size:14px;
}

ul.posts p {
  font-style: italic;
  font-size: 90%;
  margin-left:115px;
}

#home ul, #post ul {
  list-style-type: none;
  margin-left: 20px;
}

#post ol {
  margin-left: 1.35em;
}

#home ul li:before, #post ul li:before {
  content: '\25CF';
  color: {{ site.style.highlight_color }};
  display: inline-block;
  width: 1.3em;
  margin-left: -1em;
}

#home ul li, #post ul li {
  line-height: 24px;
}

.meta {
  color: #aaa;
  margin: 0 0 10px 0;
  text-align: left;
}

#meta-date {
  margin-right: 5px;
}

#meta-categories {
  white-space: nowrap;
}

.site .footer {
  font-size: 80%;
  color: #666;
  border-top: 4px solid #eee;
  overflow: hidden;
}

nav h1, nav h2 {
  text-align: center;
}

nav hr {
  margin-top: 15px;
  margin-bottom: 15px;
  border: dotted #ddd;
  border-width: 1px 0 0;
}

.article {
  float: right;
  margin: 20px auto 20px 20px;
}

.article.resize {
  max-width: 150px;
}

.article.shadow {
  box-shadow: 0 0 10px 0 rgba(0,0,0,0.5);
}

.screenshot {
  position: relative;
  margin: 30px auto 30px auto;
  max-width: 90%;
  box-shadow: 0 0 20px 0 rgba(0,0,0,0.8);
}

.screenshot-caption {
  position: relative;
  margin: 50px auto auto auto;
  max-width: 95%;
  box-shadow: 0 0 20px 0 rgba(0,0,0,0.8);
}

.screenshot-noshadow {
  position: relative;
  margin: 50px auto 50px auto;
  max-width: 100%;
}

.screenshot-noshadow-fullwidth {
  position: relative;
  margin: 30px auto 30px auto;
}

.screenshot-noshadow-cropped {
  position: relative;
  margin: -25px auto -25px auto;
  max-width: 90%;
}

.screenshot-noshadow-caption {
  position: relative;
  margin: 50px auto auto auto;
  max-width: 100%;
}

.thumbnail-video {
  float: right;
  margin-top: 7px;
  margin-bottom: 7px;
  margin-left: 3.5%;
  box-shadow: 0 0 10px 0 rgba(0,0,0,0.8);
}

.thumbnail-article {
  float: right;
  width: 190px;
  height: 120px;
  background-position: left;
  background-repeat: no-repeat;
  background-size: cover;
  margin-left: 3.5%;
  margin-top: 6px;
  margin-bottom: 7px;
  box-shadow: 0 0 3px 0 rgba(0,0,0,0.8);
}

p.thumbnail-caption {
  font-size: 95%;
  margin-bottom: 3%;
}

.thumbnail-image {
  background-position: left center;
  background-repeat: no-repeat;
  background-size: cover;
  float: left;
  margin-right: 3.5%;
  width: 160px;
  height: 160px;
}

.thumbnail-container {
  clear: left;
  min-height: 160px;
}

.thumbnail-icon {
  text-align: right;
  margin-top: -1%;
  margin-left: -7.5%;
  float: left;
}

.thumbnail-description {
  margin-left: 29%;
}

.thumbnail-description p {
  font-size: 95%;
  margin-top: -1%;
}

.thumbnail-separator {
  margin: 30px auto 30px auto;
  width: 90%;
}

.note {
  border: 1px solid #a0bce8;
  background-color: #e2ebf9;
  margin: 20px 0 20px 0;
  padding-left:5px;
  padding-right:5px;
  box-shadow: 0 1px 3px rgba(0,0,0,0.1);
  text-shadow: 0 1px 0 rgba(255,255,255,0.8);
}

.note.downloads {
  border: 1px solid #ffe7bf;
  background-color: #fff2bf;
}

.note p {
  margin: 0 !important;
  padding: 10px;
}

.note i.fa {
  padding-bottom: .5em;
}

.note.oneline p {
  margin: 0 !important;
  padding: 20px;
  text-align: center;
}

.note a {
  color: #4183c4;
}

.note.downloads a {
  color: #555;
}

.note.downloads ul {
  list-style: none;
  text-align: center;
}

.note.downloads ul li {
  display: inline;
  margin-right: 20px;
}

.note.downloads ul li:before {
  font-family: FontAwesome;
  color: #555;
  content: '\f0ed';
  margin: 0 7px 0 0;
}

.note.downloads ul #slides:before {
  font-family: FontAwesome;
  color: #555;
  content: '\f144';
  margin: 0 7px 0 0;
}

.note.downloads ul #pdf:before {
  font-family: FontAwesome;
  color: #555;
  content: '\f15c';
  margin: 0 7px 0 0;
}

.note.downloads ul #github:before {
  font-family: FontAwesome;
  color: #555;
  content: '\f09b';
  margin: 0 7px 0 0;
}

#social {
  font-size: 13px;
}

#summary {
  font-style: italic;
  padding-bottom: 0.5em;
}

#home p, #post p {
  line-height: 1.5em;
}

#home blockquote, #post blockquote {
  font-family: "Roboto", sans-serif;
  font-weight: 300;
  border-left: 3px solid {{ site.style.highlight_color }};
}

#post blockquote p {
  font-size: 18px;
}

#home blockquote p {
  font-size: 20px;
  margin: 25px auto;
}

#post pre {
  border: 1px solid #ddd;
  background-color: #f8f8f8;
  padding: .3em;
  margin-bottom: 20px !important;
}

.thumbnail-description code, #home code, #post code {
  border: 1px solid #ddd;
  background-color: #f8f8f8;
  padding: .2em;
  line-height: 25px;
}

#post pre code {
  border: none;
}

#about {
  margin: 2.2em auto 1.6em;
  border-top: 4px solid #aaa;
  padding-top: 0.9em;
}

#about p {
  font-size: 90%;
}

div.pagination {
  padding-top: 10px;
  padding-bottom: 30px;
}

div.pagination a.previous-page {
  float: left;
}

div.pagination a.next-page {
  float: right;
}

div.comments {
  margin-bottom: 20px;
}

div.comments i {
  font-size: 23px;
  margin-top: 5px;
  margin-right: 5px;
  color: {{ site.style.highlight_color }};
}

.sidebar {
  padding-top: 25px;
  font-family: "Montserrat", sans-serif;
  font-size: 15px;
}

.sidebar p {
  text-align: left;
  width: 178px;
  margin: 0 auto;
}

.sidebar a {
  font-weight: 600;
}

.content {
  font-family: "Montserrat", sans-serif;
  font-weight: 300;
  font-size: 17px;
  border-left: 1px solid #DDD;
  padding-left: 40px;
  padding-top: 25px;
  min-height: 400px;
}

.footer {
  width: 100%;
}

.footer {
  font-size: 80%;
  color: #666;
  border-top: 4px solid #EEE;
  overflow: hidden;
}

.aside {
  font-size: 75%;
  color: #666;
}

#home h2, #post h2 {
  color: {{ site.style.highlight_color }};
}

#home h2 span.subtitle {
  color: #555;
  font-size: 75%;
}

#logo {
  display: block;
  width: 100px;
  height: 100px;
  border-radius: 150px;
  -webkit-border-radius: 150px;
  -moz-border-radius: 150px;
  background: url(../../../logo.jpg) no-repeat;
  box-shadow: 0 0 8px rgba(0, 0, 0, .8);
  -webkit-box-shadow: 0 0 8px rgba(0, 0, 0, .8);
  -moz-box-shadow: 0 0 8px rgba(0, 0, 0, .8);
  margin: 0 auto 25px;
}

#stalker {
  width: 200px;
  height: auto;
  margin: 0 auto;
}

#stalker a {
  width: 40px;
  overflow: hidden;
  float: left;
  color: #555;
  transition: all 0.2s ease-in;
  -webkit-transition: all 0.2s ease-in;
  -moz-transition: all 0.2s ease-in;
  -o-transition: all 0.2s ease-in;
}

#stalker i {
  font-size: 34px;
}

#stalker a:hover {
  text-decoration: none;
  color: {{ site.style.highlight_color }};
}

i.fa-hn {
  text-align: center;
  font-size: 18px !important;
  position: relative;
  color: white;
}

.disclaimer p {
  margin-top: 15px;
  font-size: 12px;
  text-align: center;
  line-height: 15px;
}

.disclaimer i.fa-heart {
  color: {{ site.style.highlight_color }};
}

.footnotes {
  font-size: 81%;
  line-height: 18px;
  border-top: 1px solid #ddd;
  padding-top: 16px;
}

.footnotes li p {
  line-height: 20px;
  margin: 0;
}

.icon-overlay {
  font-size: 16px !important;
  position: relative;
  bottom: 27px;
  left: 5px;
  color: white;
}

.caption {
  display: block;
  margin: 15px auto 35px;
  text-align: center;
  font-size: smaller;
  font-style: italic;
}

